After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 674489 - Fix compilation warnings
Fix compilation warnings
Status: RESOLVED FIXED
Product: sound-juicer
Classification: Applications
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: Sound Juicer Maintainers
Sound Juicer Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-04-20 19:27 UTC by Christophe Fergeau
Modified: 2012-04-27 12:25 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Replace GtkHBox/GtkVBox with GtkBox (3.26 KB, patch)
2012-04-20 19:27 UTC, Christophe Fergeau
accepted-commit_now Details | Review
Remove deprecated call to gtk_hscale_new_with_range (1.05 KB, patch)
2012-04-20 19:27 UTC, Christophe Fergeau
accepted-commit_now Details | Review
Use g_format_size instead of g_format_size_for_display (1.09 KB, patch)
2012-04-20 19:27 UTC, Christophe Fergeau
accepted-commit_now Details | Review
Remove deprecated call to gdk_cursor_unref (849 bytes, patch)
2012-04-20 19:27 UTC, Christophe Fergeau
accepted-commit_now Details | Review
Don't mark file_pattern and path_pattern as const (1.36 KB, patch)
2012-04-20 19:27 UTC, Christophe Fergeau
accepted-commit_now Details | Review

Description Christophe Fergeau 2012-04-20 19:27:15 UTC
Compiling sound-juicer on f17 gives some warnings from the compiler (mainly
deprecation warnings). These patches fixes this.
Comment 1 Christophe Fergeau 2012-04-20 19:27:17 UTC
Created attachment 212449 [details] [review]
Replace GtkHBox/GtkVBox with GtkBox

This fixes deprecation warnings.
Comment 2 Christophe Fergeau 2012-04-20 19:27:20 UTC
Created attachment 212450 [details] [review]
Remove deprecated call to gtk_hscale_new_with_range

It's replaced by gtk_scale_new_with_range
Comment 3 Christophe Fergeau 2012-04-20 19:27:22 UTC
Created attachment 212451 [details] [review]
Use g_format_size instead of g_format_size_for_display

This fixes deprecation warnings.
Comment 4 Christophe Fergeau 2012-04-20 19:27:25 UTC
Created attachment 212452 [details] [review]
Remove deprecated call to gdk_cursor_unref
Comment 5 Christophe Fergeau 2012-04-20 19:27:28 UTC
Created attachment 212453 [details] [review]
Don't mark file_pattern and path_pattern as const

They are dynamically allocated, and can be changed during
sound-juicer lifetime, so they are not const strings
Comment 6 Ross Burton 2012-04-24 11:07:40 UTC
Review of attachment 212449 [details] [review]:

Good.
Comment 7 Ross Burton 2012-04-24 11:08:30 UTC
Review of attachment 212450 [details] [review]:

Good.
Comment 8 Ross Burton 2012-04-24 11:09:00 UTC
Review of attachment 212453 [details] [review]:

Good.
Comment 9 Ross Burton 2012-04-24 11:09:03 UTC
Review of attachment 212451 [details] [review]:

Good.
Comment 10 Ross Burton 2012-04-24 11:09:07 UTC
Review of attachment 212452 [details] [review]:

Good.
Comment 11 Ross Burton 2012-04-24 11:09:46 UTC
Thanks teuf!
Comment 12 Christophe Fergeau 2012-04-27 12:25:45 UTC
All pushed, thanks