Remove deprecated call to gtk_hscale_new_with_range

It's replaced by gtk_scale_new_with_range

https://bugzilla.gnome.org/show_bug.cgi?id=674489